Tue Apr 19 23:41:02 2005 CDT  Will Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/Config_Handlers/XML_File_Intf.cpp

          Silenced some compile errors in VC6.

Tue Apr 19 16:46:00 2005 CDT  Gan Deng  <dengg@dre.vanderbilt.edu>

	* CIAO-INSTALL.html

          Fixed this page to direct people where to download CIDLC.

Tue Apr 19 17:33:55 2005  Nanbor Wang  <nanbor@tesla.txcorp.com>

	* docs/schema/ServerResourceUsage.txt:
	* docs/schema/CIAOServerResources.xsd: Added the first draft
	  schema for DAnCE RT extension, and a file to document how I
	  foresee the extension can be used.

Tue Apr 19 12:16:00 2005 CDT  Will Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/Config_Handlers/IDREF_Base.h

          Fixed a compile error on VC71.

Mon Apr 18 12:50:51 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * CIDLC/ServantSourceGenerator.cpp:

          Added '.in ()' to some _var type arguments in generated code.

Mon Apr 18 08:38:14 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * CIDLC/ServantSourceGenerator.cpp:

          Changed all instances of 'FALSE' to 'false'.

Sun Apr 17 21:57:52 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * CIDLC/ServantSourceGenerator.cpp:

          Removed unnecessary _narrow() and local variable from generated
          event push operations.

Sun Apr 17 16:05:57 CDT 2005  Will Otte <wotte@dre.vanderbilt.edu>

	* DAnCE/examples/Swapping/Sender/Sender_exec_1.cpp
	* DAnCE/examples/Swapping/Sender/Sender_exec_2.cpp

          Fixed a compile error on platforms using emulated exceptions.

Sun Apr 17 12:46:51 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * ciao/CCM_Event.idl:
        * DAnCE/ciao/CCM_Event.idl:

          Added operation ciao_is_substitutable() to EventConsumerBase,
          so we can check if there is an inheritance relationship
          when a base class event consumer is passed to the subscribe()
          operation for a derived eventtype. Thanks to Boris Kolpackov